@@ -1,3 +1,12 @@
+07/06/2016:
+	- Added fix for API change in get_colour_mapping() function in Kakadu version 7.8
+
+
+02/06/2016:
+	- Type change of counter in filter_contrast to long to avoid overflows with large
+	  image exports.
+
+
 22/03/2016: Version 1.0 Released
 
 
